<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/main_color_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/main_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_color_button"
        android:layout_width="254dp"
        android:layout_height="101dp"
        android:layout_below="@id/main_color_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/color_button_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/main_color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_color_button"
        android:layout_marginTop="25dp"
        android:text="@string/color_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/main_rgb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_color_button"
        android:layout_alignStart="@+id/main_color_button"
        android:layout_below="@id/main_color_text"
        android:layout_marginTop="15dp"
        android:text="@string/rgb_text" />

    <TextView
        android:id="@+id/main_hex_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_rgb_text"
        android:layout_alignStart="@+id/main_rgb_text"
        android:layout_below="@id/main_rgb_text"
        android:layout_marginTop="15dp"
        android:text="@string/hex_text" />

    <Button
        android:id="@+id/main_doodle_button"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/main_hex_text"
        android:text="@string/switch_ui_button"
        android:textSize="20sp" />

</RelativeLayout>